--- a/priceSheet.html
+++ b/priceSheet.html
@@ -75,6 +75,11 @@
             <p>Adds light and shadow to the drawing. Color/style/atmosphere suggestions are always welcome!</p>
         </div>
         <div class="add-on">
+            <h3>Props</h3>
+            <h3>+$5 for 4th prop and above</h3>
+            <p>First three props are free by default! This is the price for each additional one. Props include any non-character item that is included in the piece, such as a drink in hand or a game console.</p>
+        </div>
+        <div class="add-on">
             <h3>Simple Abstract Background</h3>
             <h3>+$6</h3>
             <p>Examples include repeating patterns, graphics, et cetera. Anything that doesn't resemble a concrete environment or location.</p>
