Added Props to Price Sheet

--- a/priceSheet.html
+++ b/priceSheet.html
@@ -76,8 +76,8 @@
         </div>
         <div class="add-on">
             <h3>Props</h3>
-            <h3>+$5 for 4th prop and above</h3>
-            <p>First three props are free by default! This is the price for each additional one. Props include any non-character item that is included in the piece, such as a drink in hand or a game console.</p>
+            <h3>+$5</h3>
+            <p>First three props are free by default! This is the price for the fourth prop and above. Props are any non-character item that is included in the piece, such as a drink in hand or a game console.</p>
         </div>
         <div class="add-on">
             <h3>Simple Abstract Background</h3>
