Changed Page Title

--- a/priceSheet.html
+++ b/priceSheet.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" text="text/css" href="./Styles/menu.css">
     <link rel="icon" type="image/x-icon" href="./Styles/src/favicon.ico">
-    <title>Illustration | @furthings</title>
+    <title>Price Sheet | @furthings</title>
 </head>
 <body>
     <div id="background"></div>
