--- a/autoquote.html
+++ b/autoquote.html
@@ -18,7 +18,7 @@
       <h1 class="largeTitle centerText">AUTO QUOTE</h1>
 
       <p class="bodyText centerText">
-        Curious to see how much a commission may cost but don't want to do all that math by yourself? Fill out this form and a price estimate will be automatically generated for you. If you notice inconsistencies with the prices listed <a href="">here</a>, please let me know.
+        Curious to see how much a commission may cost but don't want to do all that math by yourself? Fill out this form and a price estimate will be automatically generated for you. If you notice inconsistencies with the prices listed <a href="pricesheet.html">here</a>, please let me know.
       </p>
 
       <form id="autoquote_form">
@@ -33,7 +33,7 @@
             <option value="Halfbody">Halfbody</option>
             <option value="Thighup">Thighup</option>
             <option value="Fullbody">Fullbody</option>
-            <option value="Scenic">Scenic</option>
+            <!-- <option value="Scenic">Scenic</option> -->
           </select>
         </div>
         <div class="row">
