--- a/pricesheet.html
+++ b/pricesheet.html
@@ -40,7 +40,7 @@
             <h1 class="title"><i class="dropperIndicator fa-solid fa-caret-down"></i>Extreme Closeup</h1>
             <h1 class="cost">$20</h1>
             <p class="description">
-              Also called an insert. Can focus on small subjects like eyes, hands, a particular design element, a prop, et cetere.
+              Also called an insert. Can focus on small subjects like eyes, hands, a particular design element, a prop, et cetera.
             </p>
             <div class="dropperContent">
               <img src="images/placeholder.png"/>
@@ -113,7 +113,6 @@
             <h1 class="title"><i class="dropperIndicator fa-solid fa-caret-down"></i>Scenic</h1>
             <h1 class="cost">$50 + (ask for details)</h1>
             <p class="description">
-              Also called a full shot. Shows your entire character in full and in focus.
             </p>
             <div class="dropperContent">
               <img src="images/placeholder.png"/>
@@ -123,7 +122,7 @@
           <!-- ADDONS -->
           <h1 class="title">ADD-ONS</h1>
           <p class="description">
-            The framing of your character. By default, will be a rough/sketchy render with color and a solid or gradient background.
+            The following is entirely optional. The prices below will be added on top of the base.
           </p>
 
           <!-- ADDITIONAL CHARACTERS -->
@@ -177,10 +176,10 @@
           <!-- BACKGROUNDS -->
           <!-- ABSTRACT -->
           <div id="abstract_background" onclick="toggleDropper('abstract_background')" class="listing dropper">
-            <h1 class="title"><i class="dropperIndicator fa-solid fa-caret-down"></i>Simple Abstract Background</h1>
+            <h1 class="title"><i class="dropperIndicator fa-solid fa-caret-down"></i>Abstract Background</h1>
             <h1 class="cost">+ $6</h1>
             <p class="description">
-              Examples include repeating patterns, graphics, et cetera. Anything that doesn't resemble a concrete environment or location.
+              Examples include simple repeating patterns, graphics, et cetera. Anything that doesn't resemble a concrete environment or location.
             </p>
             <div class="dropperContent">
               <img src="images/placeholder.png"/>
@@ -202,7 +201,7 @@
           <!-- COMPLEX SCENE -->
           <div id="complex_scene" onclick="toggleDropper('complex_scene')" class="listing dropper">
             <h1 class="title"><i class="dropperIndicator fa-solid fa-caret-down"></i>Complex Scene</h1>
-            <h1 class="cost">+ $15</h1>
+            <h1 class="cost">+ $30</h1>
             <p class="description">
               Puts your character into a detailed environment.
             </p>
@@ -223,7 +222,7 @@
             </div>
           </div>
         </div>
-      <div>
+      </div>
     </main>
 
     <footer class="socials">
