--- a/tos.html
+++ b/tos.html
@@ -17,16 +17,26 @@
       <a class="backButton" href="index.html"><i class="fa-solid fa-angle-left"></i></a>
       <h1 class="largeTitle centerText bigLines">TERMS OF SERVICE</h1>
 
-      <nav class="tosDirectory bodyText">
-          <h1 class="smallTitle"><i class="fa-solid fa-caret-down"></i>DIRECTORY<i class="fa-solid fa-caret-down"></i></h1>
-          <a href="#payment"><u>Payment</u></a>
-          <a href="#process"><u>Process</u></a>
-          <a href="#me"><u>What I Can Do and Can Not Do</u></a>
-          <a href="#you"><u>What You Can Do and Can Not Do</u></a>
-          <a href="#designs"><u>Character Designs</u></a>
-          <a href="#premades"><u>Premade Bases</u></a>
-        </div>
-      </nav>
+      <p class="bodyText centerText" style="margin: 0;"><em>Last Updated 08/18/24</em></p>
+      <h1 class="tosDirectory tosSection">DIRECTORY</h1>
+      <p class="bullet bodyText">
+        <a href="#payment">Payment</a>
+      </p>
+      <p class="bullet bodyText">
+        <a href="#process">Process</a>
+      </p>
+      <p class="bullet bodyText">
+        <a href="#me">What I Can Do and Can Not Do</a>
+      </p>
+      <p class="bullet bodyText">
+        <a href="#you">What You Can Do and Can Not Do</a>
+      </p>
+      <p class="bullet bodyText">
+        <a href="#designs">Character Designs</a>
+      </p>
+      <p class="bullet bodyText">
+        <a href="#premades">Premade Bases</a>
+      </p>
 
       <!-- PAYMENT -->
       <h1 id="payment" class="tosSection">PAYMENT</h1>
