--- a/tos.html
+++ b/tos.html
@@ -168,29 +168,29 @@
 
     <footer class="socials">
       <!-- email -->
-      <a target="_blank" href="mailto:furthingsart@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+      <a href="mailto:furthingsart@gmail.com"><i class="fa-solid fa-envelope"></i></a>
       <!-- etsy -->
-      <a target="_blank" href="https://www.etsy.com/shop/furthingsart"><i class="fa-brands fa-etsy"></i></a>
+      <a href="https://www.etsy.com/shop/furthingsart"><i class="fa-brands fa-etsy"></i></a>
       <!-- youtube -->
-      <a target="_blank" href="https://www.youtube.com/@furthings"><i class="fa-brands fa-youtube"></i></a>
+      <a href="https://www.youtube.com/@furthings"><i class="fa-brands fa-youtube"></i></a>
       <!-- bluesky -->
-      <a target="_blank" href="https://bsky.app/profile/furthings.bsky.social"><i class="fa-brands fa-bluesky"></i></a>
+      <a href="https://bsky.app/profile/furthings.bsky.social"><i class="fa-brands fa-bluesky"></i></a>
       <!-- fur affinity -->
-      <a target="_blank" href="https://www.furaffinity.net/user/furthings#"><img src="images/fa-logo.svg"/></a>
+      <a href="https://www.furaffinity.net/user/furthings#"><img src="images/fa-logo.svg"/></a>
       <!-- instagram -->
-      <a target="_blank" href="https://www.instagram.com/furthingsart/"><i class="fa-brands fa-instagram"></i></a>
+      <a href="https://www.instagram.com/furthingsart/"><i class="fa-brands fa-instagram"></i></a>
       <!-- twitter -->
-      <a target="_blank" href="https://twitter.com/furthings"><i class="fa-brands fa-twitter"></i></a>
+      <a href="https://twitter.com/furthings"><i class="fa-brands fa-twitter"></i></a>
       <!-- toyhouse -->
-      <a target="_blank" href="https://toyhou.se/furthings"><img src="images/toyhouse_icon.svg"/></a>
+      <a href="https://toyhou.se/furthings"><img src="images/toyhouse_icon.svg"/></a>
       <!-- paypal -->
-      <a target="_blank" href="https://paypal.me/Avrey"><i class="fa-brands fa-paypal"></i></a>
+      <a href="https://paypal.me/Avrey"><i class="fa-brands fa-paypal"></i></a>
       <!-- kofi -->
-      <a target="_blank" href="https://ko-fi.com/furthings"><img src="images/kofi-logo.svg"/></a>
+      <a href="https://ko-fi.com/furthings"><img src="images/kofi-logo.svg"/></a>
       <!-- patreon -->
-      <a target="_blank" href="https://www.patreon.com/furthings/"><i class="fa-brands fa-patreon"></i></a>
+      <a href="https://www.patreon.com/furthings/"><i class="fa-brands fa-patreon"></i></a>
       <!-- artfight -->
-      <a target="_blank" href="https://artfight.net/~furthings"><img src="images/af-logo.svg"/></a>
+      <a href="https://artfight.net/~furthings"><img src="images/af-logo.svg"/></a>
     </footer>
   </body>
 </html>
