TOS - Updated Bluesky link

--- a/tos.html
+++ b/tos.html
@@ -174,7 +174,7 @@
       <!-- youtube -->
       <a href="https://www.youtube.com/@furthings"><i class="fa-brands fa-youtube"></i></a>
       <!-- bluesky -->
-      <a href="https://bsky.app/profile/furthings.bsky.social"><i class="fa-brands fa-bluesky"></i></a>
+      <a href="https://bsky.app/profile/furthings.art"><i class="fa-brands fa-bluesky"></i></a>
       <!-- fur affinity -->
       <a href="https://www.furaffinity.net/user/furthings#"><img src="images/fa-logo.svg"/></a>
       <!-- instagram -->
