--- a/pricesheet.html
+++ b/pricesheet.html
@@ -1,3 +1,5 @@
+<!-- TO CHANGE PRICES: Be sure to update both pricesheet.html AND autoquote.js -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -51,7 +53,7 @@
           <!-- HEADSHOT -->
           <div id="headshot" onclick="toggleDropper('headshot')" class="listing dropper">
             <h1 class="title"><i class="dropperIndicator fa-solid fa-caret-down"></i>Headshot</h1>
-            <h1 class="cost">$30</h1>
+            <h1 class="cost">$35</h1>
             <p class="description">
               Also called a closeup. Shows the head and shoulder area.
             </p>
@@ -63,7 +65,7 @@
           <!-- BUST -->
           <div id="bust" onclick="toggleDropper('bust')" class="listing dropper">
             <h1 class="title"><i class="dropperIndicator fa-solid fa-caret-down"></i>Bust</h1>
-            <h1 class="cost">$35</h1>
+            <h1 class="cost">$40</h1>
             <p class="description">
               Also called a medium closeup. Shows the elbow/chest area and above.
             </p>
@@ -75,7 +77,7 @@
           <!-- HALFBODY -->
           <div id="halfbody" onclick="toggleDropper('halfbody')" class="listing dropper">
             <h1 class="title"><i class="dropperIndicator fa-solid fa-caret-down"></i>Halfbody</h1>
-            <h1 class="cost">$40</h1>
+            <h1 class="cost">$45</h1>
             <p class="description">
               Also called a mid shot. Shows about half the character; belly area and above. 
             </p>
@@ -87,7 +89,7 @@
           <!-- THIGHUP -->
           <div id="thighup" onclick="toggleDropper('thighup')" class="listing dropper">
             <h1 class="title"><i class="dropperIndicator fa-solid fa-caret-down"></i>Thighup</h1>
-            <h1 class="cost">$45</h1>
+            <h1 class="cost">$50</h1>
             <p class="description">
               Also called a medium full shot. Shows the thigh/knee area and above.
             </p>
@@ -99,7 +101,7 @@
           <!-- FULLBODY -->
           <div id="fullbody" onclick="toggleDropper('fullbody')" class="listing dropper">
             <h1 class="title"><i class="dropperIndicator fa-solid fa-caret-down"></i>Fullbody</h1>
-            <h1 class="cost">$50</h1>
+            <h1 class="cost">$55</h1>
             <p class="description">
               Also called a full shot. Shows your entire character in full and in focus.
             </p>
@@ -111,7 +113,7 @@
           <!-- SCENIC -->
           <div id="scenic" onclick="toggleDropper('scenic')" class="listing dropper">
             <h1 class="title"><i class="dropperIndicator fa-solid fa-caret-down"></i>Scenic</h1>
-            <h1 class="cost">$50 + (ask for details)</h1>
+            <h1 class="cost">$55 + (ask for details)</h1>
             <p class="description">
             </p>
             <div class="dropperContent">
