Pricesheet - Removed closeups and merged them with props

--- a/pricesheet.html
+++ b/pricesheet.html
@@ -37,19 +37,6 @@
             The framing of your character. By default, will be a rough/sketchy render with color and a solid or gradient background.
           </p>
 
-          <!-- EXTREME CLOSEUP -->
-          <div id="extreme_closeup" onclick="toggleDropper('extreme_closeup')" class="listing dropper">
-            <h1 class="title"><i class="dropperIndicator fa-solid fa-caret-down"></i>Extreme Closeup</h1>
-            <h1 class="cost">$20</h1>
-            <p class="description">
-              Also called an insert. Can focus on small subjects like eyes, hands, a particular design element, a prop, et cetera.
-            </p>
-            <div class="dropperContent">
-              <img src="images/placeholder.png"/>
-              <img src="images/placeholder.png"/>
-            </div>
-          </div>
-
           <!-- HEADSHOT -->
           <div id="headshot" onclick="toggleDropper('headshot')" class="listing dropper">
             <h1 class="title"><i class="dropperIndicator fa-solid fa-caret-down"></i>Headshot</h1>
@@ -168,13 +155,13 @@
             <h1 class="title"><i class="dropperIndicator fa-solid fa-caret-down"></i>Props</h1>
             <h1 class="cost">+ $5</h1>
             <p class="description">
-              First three props are free by default! This is the price for the fourth prop and above. Props are any non-character item that is included in the piece, such as a drink in hand or a game console.
+              First three props are free by default! This is the price for the fourth one and above. Props are usually any non-character item that is included in the piece, such as a drink in hand or a game console. Props can also cover smaller closeups (AKA inserts) of your character in reference sheets or sketch pages, or a second character in a piece if only a small part of them is shown and not in focus, such as a hand or a tail.
             </p>
             <div class="dropperContent">
               <img src="images/placeholder.png"/>
             </div>
           </div>
-
+          
           <!-- BACKGROUNDS -->
           <!-- ABSTRACT -->
           <div id="abstract_background" onclick="toggleDropper('abstract_background')" class="listing dropper">
