Pricesheet - Found typo

--- a/pricesheet.html
+++ b/pricesheet.html
@@ -119,7 +119,7 @@
             <h1 class="title"><i class="dropperIndicator fa-solid fa-caret-down"></i>Additional Characters</h1>
             <h1 class="cost">+ 65% of base</h1>
             <p class="description">
-              Per additional character. For example, if a bullbody costs $60, two fullbodies would be $60.00 + $39.00 (65% of $60) = $99.00. The two characters don't have to share the same framing!
+              Per additional character. For example, if a fullbody costs $60, two fullbodies would be $60.00 + $39.00 (65% of $60) = $99.00. The two characters don't have to share the same framing!
             </p>
             <div class="dropperContent">
               <img src="images/placeholder.png"/>
