Added headshot examples to pricesheet

--- a/pricesheet.html
+++ b/pricesheet.html
@@ -45,7 +45,7 @@
               Also called a closeup. Shows the head and shoulder area.
             </p>
             <div class="dropperContent">
-              <img src="images/placeholder.png"/>
+              <img src="images/raine.gif"/><img src="images/steak1.png"/><img src="dog puppie dog baby child.gif"/><img src="headshot.png"/>
             </div>
           </div>
 
