Headshot examples pt4

--- a/pricesheet.html
+++ b/pricesheet.html
@@ -45,7 +45,7 @@
               Also called a closeup. Shows the head and shoulder area.
             </p>
             <div class="dropperContent">
-              <img src="images/raine.gif"/><img src="images/steak1.png"/><br>
+              <img src="images/raine.gif"/><img src="images/steak1.png"/></br>
               <img src="images/headshot.png"/><img src="images/dog puppie dog baby child.gif"/>
             </div>
           </div>
