AddCharacter() & prep for dynamic sizing
- Refactored the js method to easily change what options are displayed
  for the dropdown.
- Created variables for:
  - the main content's width & height plus all font sizes

--- a/tos.html
+++ b/tos.html
@@ -13,6 +13,7 @@
   </head>
 
   <body>
+    <script src="scrollTo.js"></script>
     <main>
       <a class="backButton" href="index.html"><i class="fa-solid fa-angle-left"></i></a>
       <h1 class="largeTitle centerText bigLines">TERMS OF SERVICE</h1>
