pricesheet.html - corrected coments at the top

--- a/pricesheet.html
+++ b/pricesheet.html
@@ -1,4 +1,4 @@
-<!-- TO CHANGE PRICES: Be sure to update both pricesheet.html AND autoquote.js -->
+<!-- TO CHANGE PRICES: Be sure to update both pricesheet.html, autoquote.html, AND autoquote.js -->
 
 <!DOCTYPE html>
 <html lang="en">
