--- a/pricesheet.html
+++ b/pricesheet.html
@@ -45,10 +45,10 @@
               Also called a closeup. Shows the head and shoulder area.
             </p>
             <div class="dropperContent">
-              <img src="images/raine.gif"/>
-              <img src="images/headshot.png"/>
-              <img src="images/steak1.png"/>
-              <img src="images/dog puppie dog baby child.gif"/>
+              <img src="images/headshots/raine.gif"/>
+              <img src="images/headshots/headshot.png"/>
+              <img src="images/headshots/steak1.png"/>
+              <img src="images/headshots/dog puppie dog baby child.gif"/>
             </div>
           </div>
 
