Added thighup and fullbody examples

--- a/pricesheet.html
+++ b/pricesheet.html
@@ -84,7 +84,8 @@
               Also called a medium full shot. Shows the thigh/knee area and above.
             </p>
             <div class="dropperContent">
-              <img src="images/placeholder.png"/>
+              <img src="images/thighups/willow1.png"/>
+              <img src="images/thighups/oh, to be.png"/>
             </div>
           </div>
 
@@ -96,7 +97,9 @@
               Also called a full shot. Shows your entire character in full and in focus.
             </p>
             <div class="dropperContent">
-              <img src="images/placeholder.png"/>
+              <img src="images/fullbodies/secret santa.gif"/>
+              <img src="images/fullbodies/late night photography.png"/>
+              <img src="images/fullbodies/beach wip.png"/>
             </div>
           </div>
 
