Removed scenic option pt1

--- a/pricesheet.html
+++ b/pricesheet.html
@@ -103,17 +103,6 @@
             </div>
           </div>
 
-          <!-- SCENIC -->
-          <div id="scenic" onclick="toggleDropper('scenic')" class="listing dropper">
-            <h1 class="title"><i class="dropperIndicator fa-solid fa-caret-down"></i>Scenic</h1>
-            <h1 class="cost">$55 + (ask for details)</h1>
-            <p class="description">
-            </p>
-            <div class="dropperContent">
-              <img src="images/placeholder.png"/>
-            </div>
-          </div>
-
           <!-- ADDONS -->
           <h1 class="title">ADD-ONS</h1>
           <p class="description">
@@ -177,7 +166,7 @@
               Puts your character into a simplified environment.
             </p>
             <div class="dropperContent">
-              <img src="images/placeholder.png"/>
+              <img src="images/thighups/willow1.png"/>
             </div>
           </div>
 
