Removed scenic option pt 3

--- a/autoquote.html
+++ b/autoquote.html
@@ -1,3 +1,5 @@
+<!-- TO CHANGE PRICES: Be sure to update pricesheet.html, autoquote.html, AND autoquote.js -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -32,7 +34,6 @@
             <option value="Halfbody">Halfbody</option>
             <option value="Thighup">Thighup</option>
             <option value="Fullbody">Fullbody</option>
-            <!-- <option value="Scenic">Scenic</option> -->
           </select>
         </div>
         <div class="row">
