Fixed typo + price change

--- a/pricesheet.html
+++ b/pricesheet.html
@@ -136,7 +136,7 @@
           <!-- PROPS -->
           <div id="props" onclick="toggleDropper('props')" class="listing dropper">
             <h1 class="title"><i class="dropperIndicator fa-solid fa-caret-down"></i>Props</h1>
-            <h1 class="cost">+ $5</h1>
+            <h1 class="cost">+ $8</h1>
             <p class="description">
               First three props are free by default! This is the price for the fourth one and above. Props are any non-character item that is included in the piece or smaller closeups (AKA inserts) of a character.
             </p>
@@ -144,7 +144,7 @@
               <img src="images/addons/unsheathe.gif"/>
               <img src="images/headshots/raine.gif"/>
               <img src="images/fullbodies/late night photography.png"/>
-              <img src=?images/headshots/steak1.png"/>
+              <img src="images/headshots/steak1.png"/>
             </div>
           </div>
           
