Renamed simple scene to scenic

--- a/autoquote.html
+++ b/autoquote.html
@@ -41,7 +41,7 @@
           <select id="background" name="background">
             <option value="None">None</option>
             <option value="Abstract">Abstract</option>
-            <option value="Simple Scene">Simple Scene</option>
+            <option value="Simple Scene">Scenic</option>
           </select>
           <label for="props">Props: </label>
           <input id="props" name="props" value="0" type="number" min="0" max="9">
