Renamed simple scene to scenic background

--- a/pricesheet.html
+++ b/pricesheet.html
@@ -163,7 +163,7 @@
 
           <!--  SCENE -->
           <div id="simple_scene" onclick="toggleDropper('simple_scene')" class="listing dropper">
-            <h1 class="title"><i class="dropperIndicator fa-solid fa-caret-down"></i>Scene</h1>
+            <h1 class="title"><i class="dropperIndicator fa-solid fa-caret-down"></i>Scenic Background</h1>
             <h1 class="cost">+ $15</h1>
             <p class="description">
               Puts your character into a simplified environment.
