Added a bust example

--- a/pricesheet.html
+++ b/pricesheet.html
@@ -60,7 +60,7 @@
               Also called a medium closeup. Shows the elbow/chest area and above.
             </p>
             <div class="dropperContent">
-              <img src="images/placeholder.png"/>
+              <img src="images/busts/willow2.png"/>
             </div>
           </div>
 
