Realized one of my headshots was actually a bust

--- a/pricesheet.html
+++ b/pricesheet.html
@@ -46,7 +46,6 @@
             </p>
             <div class="dropperContent">
               <img src="images/headshots/raine.gif"/>
-              <img src="images/headshots/headshot.png"/>
               <img src="images/headshots/steak1.png"/>
               <img src="images/headshots/dog puppie dog baby child.gif"/>
             </div>
@@ -61,6 +60,7 @@
             </p>
             <div class="dropperContent">
               <img src="images/busts/willow2.png"/>
+              <img src="images/busts/bust.png"/>
             </div>
           </div>
 
