Added another scene example

--- a/pricesheet.html
+++ b/pricesheet.html
@@ -170,6 +170,7 @@
             </p>
             <div class="dropperContent">
               <img src="images/thighups/willow1.png"/>
+              <img src="images/busts/willow2.png"/>
             </div>
           </div>
 
