Found typo in 1.9

--- a/tos.html
+++ b/tos.html
@@ -66,7 +66,7 @@
         If you do not have a visual reference for your character, you will be charged a character designing fee that will vary based on the prompt given. See <a href="#designs">5.0 - CHARACTER DESIGNS</a> below for more details.
       </p>
       <p class="bullet bodyText">
-        Refunds may be given on cancelled commissions depending on current progress. A sipmle guideline for how refund amounts are calculated are as follows. Full refunds are given to any stages that were paid for but not started. Stages that were started but not completed will be refunded a percentage of that stage based on level of completion. Refund amounts may vary.
+        Refunds may be given on cancelled commissions depending on current progress. A simple guideline for how refund amounts are calculated are as follows. Full refunds are given to any stages that were paid for but not started. Stages that were started but not completed will be refunded a percentage of that stage based on level of completion. Refund amounts may vary.
       </p>
 
       <!-- PROCESS -->
