Modified wording on many points (see description for details)
Updated: 1.9, 2.1, 2.1b, 2.2, 3.1, 4.5, and 6.6
Added: current 2.1c
Moved: former 2.1c is now 2.1d

--- a/tos.html
+++ b/tos.html
@@ -18,7 +18,7 @@
       <a class="backButton" href="index.html"><i class="fa-solid fa-angle-left"></i></a>
       <h1 class="largeTitle centerText bigLines">TERMS OF SERVICE</h1>
 
-      <p class="bodyText centerText" style="margin: 0;"><em>Last Updated 08/18/24</em></p>
+      <p class="bodyText centerText" style="margin: 0;"><em>Last Updated 01/09/25</em></p>
       <h1 class="tosDirectory tosSection">DIRECTORY</h1>
       <p class="bullet bodyText">
         <a href="#payment">Payment</a>
@@ -66,25 +66,28 @@
         If you do not have a visual reference for your character, you will be charged a character designing fee that will vary based on the prompt given. See <a href="#designs">5.0 - CHARACTER DESIGNS</a> below for more details.
       </p>
       <p class="bullet bodyText">
-        Refunds may be given on cancelled commissions depending on current progress. A simple guideline for how refund amounts are calculated are as follows. Full refunds are given to any stages that were paid for but not started. Stages that were started but not completed will be refunded a percentage of that stage based on level of completion. Refund amounts may vary.
+        Refunds may be given on cancelled commissions depending on current progress. A simple guideline for how refund amounts are calculated are as follows: Full refunds are given to any stages that were paid for but not started. Stages that were started but not completed will be refunded a percentage of that stage based on level of completion. Stages that were completed will not be refunded. Refund amounts may vary.
       </p>
 
       <!-- PROCESS -->
       <h1 id="process" class="tosSection">PROCESS</h1>
       <p class="bullet bodyText">
-        The drawing and check-in process will occur in stages: rough, cleaning/coloring, and shading. Not all commissions require all stages.
+        The drawing and check-in process will occur in stages/passes: rough, cleaning, coloring, and shading. Not all commissions require all stages.
       </p>
       <p class="subbullet bodyText">
-        The rough stage is defined as a sketchy rendering of your character(s).
+        The rough stage is defined as a very rough blocking pass of your character(s). Structural marks will be seen throughout.
       </p>
       <p class="subbullet bodyText">
-        The cleaning stage is defined as a clean-lined and clean-colored render of your character(s).
+        The cleaning stage is defined as a more refined pass of your character(s). The lines may remian rough and sketchy at parts since that is the style I prefer, but there will be no obvious distuptions to the drawing and structural lines will be gone.
       </p>
       <p class="subbullet bodyText">
-        The shading stage is defined as a colored and shaded rendering of your character(s).
+        The coloring stage is defined as a cleaned and colored rendering of your character(s).
+      </p>
+      <p class="subbullet bodyText">
+        The shading stage is defined as a cleaned, colored, and shaded rendering of your character(s).
       </p>
       <p class="bullet bodyText">
-        After each stage, I will send a work-in-progress (WIP) image to check in and make sure the piece is turning out how you want. I will make a maximum of 5 small changes after each stage. If the commissioner has approved a stage or if 5 small changes have been made to that stage, that aspect of the drawing will not be revised in future stages.
+        After each pass, I will send a work-in-progress (WIP) image to check in and make sure the piece is turning out how you want. I will make a maximum of 5 small changes after each stage. If the commissioner has approved a stage or if 5 small changes have been made to that stage, that aspect of the drawing will not be revised in future passes.
       </p>
       <p class="bullet bodyText">
         You may ask for updates and progress screenshots at any time, even outside of the automatic check-ins I perform.
@@ -96,7 +99,7 @@
       <!-- WHAT I CAN AND CAN NOT DO -->
       <h1 id="me" class="tosSection">WHAT I CAN AND CAN NOT DO</h1>
       <p class="bullet bodyText">
-        I will attempt most species. For bipedal non-human characters, I will draw the character's legs consistent with the reference unless otherwise requested (such as digitigrade, plantigrade, etc.) or I'll choose if neither are supplied.
+        I will attempt most species. For bipedal non-human characters, I will draw the character's legs consistent with the reference unless otherwise requested (digitigrade vs plantigrade, etc.) or I'll choose if neither are supplied.
       </p>
       <p class="bullet bodyText">
         I will not copy other people's or company's art styles outside of eyes occasionally or other specific circumstances.
@@ -126,7 +129,7 @@
         You may not use any of my work commercially unless terms have already been discussed and agreed upon.
       </p>
       <p class="bullet bodyText">
-        You may re-post my work anywhere as long as proper credit is given. Linking back to the original post and/or artist somewhere in the description or on the image itself is encouraged but not necessary.
+        You may re-post my work anywhere as long as proper credit is given. Linking back to the original post and/or artist somewhere in the description or on the image itself is encouraged but not necessary as long as my name is mentioned as the artist in some form.
       </p>
 
       <!-- CHARACTER DESIGNS -->
@@ -162,7 +165,7 @@
         You may make and sell adoptables with my bases as long as you aren’t violating 6.2 (see above).
       </p>
       <p class="bullet bodyText">
-        When sharing what you made with a base, you must also link back to the original post somewhere in your message or description.
+        When sharing what you made with a base, you must also link back to the original base somewhere in your message or description.
       </p>
 
     </main>
