Bye bye Twitter!

--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
       <a href="https://www.furaffinity.net/user/furthings#"><img src="images/fa-logo.svg"/></a>
       <!-- instagram -->
       <a href="https://www.instagram.com/furthingsart/"><i class="fa-brands fa-instagram"></i></a>
-      <!-- twitter -->
-      <a href="https://twitter.com/furthings"><i class="fa-brands fa-twitter"></i></a>
+      <!-- tumblr? go here -->
       <!-- toyhouse -->
       <a href="https://toyhou.se/furthings"><img src="images/toyhouse_icon.svg"/></a>
       <!-- paypal -->
