--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <main>
       <h1 class="largeTitle centerText bigLines">FURTHINGS COMMISSION HUB</h1>
-      <h1 class="mediumTitle centerText bigLines">COMMISSIONS ARE: (TENTATIVELY) OPEN!</h1>
+      <h1 class="mediumTitle centerText bigLines">COMMISSIONS ARE: TENTATIVELY OPEN!</h1>
       <a class="smallTitle centerText bigLines underlineHover" href="https://trello.com/b/GwqS2tYQ/reds-queue">CLICK TO VISIT MY QUEUE ></a>
       <img class="homeLogo" src="images/whimper.png">
 
