--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
       <h1 class="largeTitle centerText bigLines">FURTHINGS COMMISSION HUB</h1>
       <h1 class="mediumTitle centerText bigLines">COMMISSIONS ARE: OPEN!</h1>
-      <h1 class="mediumTitle centerText bigLines"><span style="font-size: 20pt; line-height: 1">(TENTATIVELY)</span></h1>
+      <h1 class="mediumTitle centerText"><span style="font-size: 20pt; line-height: 0.8">(TENTATIVELY)</span></h1>
       <a class="smallTitle centerText bigLines underlineHover" href="https://trello.com/b/GwqS2tYQ/reds-queue">CLICK TO VISIT MY QUEUE ></a>
       <img class="homeLogo" src="images/whimper.png">
 
