--- a/about.html
+++ b/about.html
@@ -27,31 +27,8 @@
       </p>
     </main>
 
-    <footer class="socials">
-      <!-- email -->
-      <a href="mailto:furthingsart@gmail.com"><i class="fa-solid fa-envelope"></i></a>
-      <!-- etsy -->
-      <a href="https://www.etsy.com/shop/furthingsart"><i class="fa-brands fa-etsy"></i></a>
-      <!-- youtube -->
-      <a href="https://www.youtube.com/@furthings"><i class="fa-brands fa-youtube"></i></a>
-      <!-- bluesky -->
-      <a href="https://bsky.app/profile/furthings.art"><i class="fa-brands fa-bluesky"></i></a>
-      <!-- fur affinity -->
-      <a href="https://www.furaffinity.net/user/furthings#"><img src="images/fa-logo.svg"/></a>
-      <!-- instagram -->
-      <a href="https://www.instagram.com/furthingsart/"><i class="fa-brands fa-instagram"></i></a>
-      <!-- twitter -->
-      <a href="https://twitter.com/furthings"><i class="fa-brands fa-twitter"></i></a>
-      <!-- toyhouse -->
-      <a href="https://toyhou.se/furthings"><img src="images/toyhouse_icon.svg"/></a>
-      <!-- paypal -->
-      <a href="https://paypal.me/Avrey"><i class="fa-brands fa-paypal"></i></a>
-      <!-- kofi -->
-      <a href="https://ko-fi.com/furthings"><img src="images/kofi-logo.svg"/></a>
-      <!-- patreon -->
-      <a href="https://www.patreon.com/furthings/"><i class="fa-brands fa-patreon"></i></a>
-      <!-- artfight -->
-      <a href="https://artfight.net/~furthings"><img src="images/af-logo.svg"/></a>
+    <footer id="footer" class="socials">
     </footer>
+    <script src="footer.js"></script>
   </body>
 </html>
