--- a/tos.html
+++ b/tos.html
@@ -95,6 +95,9 @@
       <p class="bullet bodyText">
         Redlining (the act of drawing over an image for correction/demonstration purposes) my WIP images is encouraged. Providing any outside supplemental images is also encouraged to give me the best idea of what you are looking for.
       </p>
+      <p class="bullet bodyText">
+        "Doodle" commission types do not follow the above process, but are instead delivered without any commissioner input, excluding the initial prompt. I will not make any changes retroactively unless I need to fix a mistake that was my fault (ex. a missing design feature). They are so cheap because they are quick, messy, and do not go through the normal design process my other commissions typically would.
+      </p>
 
       <!-- WHAT I CAN AND CAN NOT DO -->
       <h1 id="me" class="tosSection">WHAT I CAN AND CAN NOT DO</h1>
