Name change for real confirmed is legit (GONE WRONG) (GONE SEXUAL)?????

--- a/about.html
+++ b/about.html
@@ -16,11 +16,11 @@
     <main>
       <a class="backButton" href="index.html"><i class="fa-solid fa-angle-left"></i></a>
       <h1 class="largeTitle centerText bigLines">HOWDY! I'M...</h1>
-      <h1 class="mediumTitle centerText bigLines">RED <i class="fa-solid fa-venus"></i> Young Adult</h1>
+      <h1 class="mediumTitle centerText bigLines">FADE <i class="fa-solid fa-venus"></i> Young Adult</h1>
       <h1 class="smallTitle centerText bigLines">ILLUSTRATOR &nbsp;/&nbsp; ANIMATOR &nbsp;/&nbsp; DESIGNER</h1>
 
       <p class="bodyText centerText" style="font-size: 14pt;">
-        Hiya, you can call me Red! I like to draw and I'm tired :) I create character-focused digital artwork, ranging from illustrations, to animations, designs, and 3D modeling. I also dabble in crafting/costume-making from time to time but it's more of a hobby at this stage. My love for nature, creativity, self-expression, and my various animal friends inspire me to create and do what I do.
+        Hiya, you can call me Fade! I like to draw and I'm tired :) I create character-focused digital artwork, ranging from illustrations, to animations, designs, and 3D modeling. I also dabble in crafting/costume-making from time to time but it's more of a hobby at this stage. My love for nature, creativity, self-expression, and my various animal friends inspire me to create and do what I do.
       </p>
       <p class="centerText" style="color: var(--orange); font-weight: bold; font-size: 14pt;">
         Thank you so much for visiting! <span style="color: var(--text_red);"><3</span>
