--- a/pricesheet.html
+++ b/pricesheet.html
@@ -174,6 +174,18 @@
             </div>
           </div>
 
+          <!-- 3D REFERENCE SHEET -->
+          <div id="3d_reference" onclick="toggleDropper('3d_reference')" class="listing dropper">
+            <h1 class="title"><i class="dropperIndicator fa-solid fa-caret-down"></i>3D Reference Fee</h1>
+            <h1 class="cost">+ $8 or $12</h1>
+            <p class="description">
+              If the reference provided is a screenshot of a 3D model, the higher amount will be added as a fee, as 3D model references can be unclear in design and color. If you provide a color palette of your character with the screenshots, this lowers to the smaller figure.
+            </p>
+            <div class="dropperContent">
+              <img src="images/placeholder.png"/>
+            </div>
+          </div>
+
           <!-- NO COLOR -->
           <div id="no_color" onclick="toggleDropper('no_color')" class="listing dropper">
             <h1 class="title"><i class="dropperIndicator fa-solid fa-caret-down"></i>No Color</h1>
