Added some examples

--- a/pricesheet.html
+++ b/pricesheet.html
@@ -45,6 +45,7 @@
               Also called a closeup. Shows the head and shoulder area.
             </p>
             <div class="dropperContent">
+              <img src="images/headshots/!!.png"/>
               <img src="images/headshots/raine.gif"/>
               <img src="images/headshots/steak1.png"/>
               <img src="images/headshots/dog puppie dog baby child.gif"/>
@@ -97,9 +98,10 @@
               Also called a full shot. Shows your entire character in full and in focus.
             </p>
             <div class="dropperContent">
-              <img src="images/fullbodies/secret santa.gif"/>
+              <img src="images/fullbodies/Gay furrie SPOTTED.png"/>
               <img src="images/fullbodies/late night photography.png"/>
               <img src="images/fullbodies/beach wip.png"/>
+              <img src="images/fullbodies/secret santa.gif"/>
             </div>
           </div>
 
@@ -117,7 +119,7 @@
               Per additional character. For example, if a fullbody costs $60, two fullbodies would be $60.00 + $39.00 (65% of $60) = $99.00. The two characters don't have to share the same framing!
             </p>
             <div class="dropperContent">
-              <img src="images/placeholder.png"/>
+              <img src="images/fullbodies/Gay furrie SPOTTED.png"/>
             </div>
           </div>
 
@@ -129,7 +131,8 @@
               Adds light and shadow to the drawing. Color/style/atmosphere suggestions are always welcome!
             </p>
             <div class="dropperContent">
-              <img src="images/placeholder.png"/>
+              <img src="images/fullbodies/Gay furrie SPOTTED.png"/>
+              <img src="images/fullbodies/late night photography.png"/>
             </div>
           </div>
 
@@ -171,6 +174,7 @@
             <div class="dropperContent">
               <img src="images/thighups/willow1.png"/>
               <img src="images/busts/willow2.png"/>
+              <img src="images/fullbodies/late night photography.png"/>
             </div>
           </div>
 
