Moved an image that was miscategorized

--- a/pricesheet.html
+++ b/pricesheet.html
@@ -60,7 +60,6 @@
               Also called a medium closeup. Shows the elbow/chest area and above.
             </p>
             <div class="dropperContent">
-              <img src="images/busts/willow2.png"/>
               <img src="images/busts/bust.png"/>
             </div>
           </div>
@@ -73,7 +72,7 @@
               Also called a mid shot. Shows about half the character; belly area and above. 
             </p>
             <div class="dropperContent">
-              <img src="images/placeholder.png"/>
+              <img src="images/halfbodies/willow2.png"/>
             </div>
           </div>
 
