--- a/pricesheet.html
+++ b/pricesheet.html
@@ -61,6 +61,9 @@
             </p>
             <div class="dropperContent">
               <img src="images/busts/bust.png"/>
+              <img src="images/placeholder.png"/>
+              <img src="images/placeholder.png"/>
+              <img src="images/placeholder.png"/>
             </div>
           </div>
 
@@ -73,6 +76,9 @@
             </p>
             <div class="dropperContent">
               <img src="images/halfbodies/willow2.png"/>
+              <img src="images/placeholder.png"/>
+              <img src="images/placeholder.png"/>
+              <img src="images/placeholder.png"/>
             </div>
           </div>
 
@@ -86,6 +92,8 @@
             <div class="dropperContent">
               <img src="images/thighups/willow1.png"/>
               <img src="images/thighups/oh, to be.png"/>
+              <img src="images/placeholder.png"/>
+              <img src="images/placeholder.png"/>
             </div>
           </div>
 
@@ -119,6 +127,9 @@
             </p>
             <div class="dropperContent">
               <img src="images/fullbodies/Gay furrie SPOTTED.png"/>
+              <img src="images/placeholder.png"/>
+              <img src="images/placeholder.png"/>
+              <img src="images/placeholder.png"/>
             </div>
           </div>
 
@@ -132,6 +143,8 @@
             <div class="dropperContent">
               <img src="images/fullbodies/Gay furrie SPOTTED.png"/>
               <img src="images/fullbodies/late night photography.png"/>
+              <img src="images/placeholder.png"/>
+              <img src="images/placeholder.png"/>
             </div>
           </div>
 
@@ -160,6 +173,9 @@
             </p>
             <div class="dropperContent">
               <img src="images/placeholder.png"/>
+              <img src="images/placeholder.png"/>
+              <img src="images/placeholder.png"/>
+              <img src="images/placeholder.png"/>
             </div>
           </div>
 
@@ -174,6 +190,7 @@
               <img src="images/thighups/willow1.png"/>
               <img src="images/busts/willow2.png"/>
               <img src="images/fullbodies/late night photography.png"/>
+              <img src="images/placeholder.png"/>
             </div>
           </div>
 
@@ -186,6 +203,9 @@
             </p>
             <div class="dropperContent">
               <img src="images/placeholder.png"/>
+              <img src="images/placeholder.png"/>
+              <img src="images/placeholder.png"/>
+              <img src="images/placeholder.png"/>
             </div>
           </div>
 
@@ -197,6 +217,9 @@
               Looking for an empty sketch/lineart instead? Take this amount away from the base price, per character!
             </p>
             <div class="dropperContent">
+              <img src="images/placeholder.png"/>
+              <img src="images/placeholder.png"/>
+              <img src="images/placeholder.png"/>
               <img src="images/placeholder.png"/>
             </div>
           </div>
