Fixed broken image link

--- a/pricesheet.html
+++ b/pricesheet.html
@@ -188,7 +188,7 @@
             </p>
             <div class="dropperContent">
               <img src="images/thighups/willow1.png"/>
-              <img src="images/busts/willow2.png"/>
+              <img src="images/halfbodies/willow2.png"/>
               <img src="images/fullbodies/late night photography.png"/>
               <img src="images/placeholder.png"/>
             </div>
