--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <main>
       <h1 class="largeTitle centerText bigLines">FURTHINGS COMMISSION HUB</h1>
-      <h1 class="mediumTitle centerText bigLines">COURRENT OPENING:</h1>
+      <h1 class="mediumTitle centerText bigLines">CURRENT OPENING:</h1>
       <h1 class="mediumTitle centerText" style="font-size: 18pt; line-height: 0.8; margin-bottom: 6px">Fursona ID Cards! [10/10 open] </h1>
       <a class="smallTitle centerText bigLines underlineHover" href="https://trello.com/b/GwqS2tYQ/reds-queue">CLICK TO VISIT MY QUEUE ></a>
       <img class="homeLogo" src="images/whimper.png">
