--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
   <body>
     <main>
       <h1 class="largeTitle centerText bigLines">FURTHINGS COMMISSION HUB</h1>
-	  <h1 class="mediumTitle centerText bigLines underlineHover">
-		<a class="mediumTitle underlineHover" href="https://ko-fi.com/c/f8c7b2d012">
+		<a style="margin-bottom: 8px; font-weight: bold" class="mediumTitle centerText underlineHover" href="https://ko-fi.com/c/f8c7b2d012">
 			CURRENT OPENING:<br/>
 			<span class="smallTitle" style="color: var(--orange)">Fursona ID Cards! [10/10 left]</span>
 		</a>
-	  </h1>
       <a class="smallTitle centerText bigLines underlineHover" href="https://trello.com/b/GwqS2tYQ/reds-queue">CLICK TO VISIT MY QUEUE ></a>
       <img class="homeLogo" src="images/whimper.png">
 
