Updated 2.0 section: Changed Rough + Cleaning stages to be Blocking + Lining stages

--- a/tos.html
+++ b/tos.html
@@ -72,13 +72,13 @@
       <!-- PROCESS -->
       <h1 id="process" class="tosSection">PROCESS</h1>
       <p class="bullet bodyText">
-        The drawing and check-in process will occur in stages/passes: rough, cleaning, coloring, and shading. Not all commissions require all stages.
+        The drawing and check-in process will occur in stages/passes: blocking, lining, coloring, and shading. Not all commissions require all stages.
       </p>
       <p class="subbullet bodyText">
-        The rough stage is defined as a very rough blocking pass of your character(s). Structural marks will be seen throughout.
+        The blocking stage is my alternative to a sketching stage. It is defined as a lineless "color blob" pass of your character(s). Colored shapes are used to define the body instead of linework, so the colors will not be accurate to your character(s) at this stage. Things may look odd right now, but trust the process!
       </p>
       <p class="subbullet bodyText">
-        The cleaning stage is defined as a more refined pass of your character(s). The lines may remian rough and sketchy at parts since that is the style I prefer, but there will be no obvious distuptions to the drawing and structural lines will be gone.
+        The lining stage is defined as a refined lined pass of your character(s). The lines may remaim sketchy and expressive at parts since that is the style I prefer, but there will be no obvious disruptions to the drawing.
       </p>
       <p class="subbullet bodyText">
         The coloring stage is defined as a cleaned and colored rendering of your character(s).
